# cmake_template

./: .gitignore  CMakeLists.txt  README.md  init.cmake
_cmake/: utils.cmake
app/: CMakeLists.txt  app_main.cpp  pch.h
app/src/: app_main.cpp
docs/: README.md
libsomething/: CMakeLists.txt  libsource.cpp  libsource.h  pch.h
libsomething/include/libsomething/: libsource.h  win_includes.h
libsomething/src/: detail.cpp  libsource.cpp
static_lib/: pch.h
static_lib/include/static_lib/: header.hpp
static_lib/src/: source.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  pch.h  test_cases.cpp  test_main.cpp
tests/: CMakeLists.txt  pch.h
tests/src/: test_cases.cpp
tests/src/test_cases/: module0.cpp
